leap-demo-spring-app-master/leap-demo-spring-app-deployment/deployment/filtered/openshift/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: leap-demo-spring-app-service
spec:
  selector:
    app: leap-demo-spring-app
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9443-https
    port: 9443
    protocol: TCP
    targetPort: 9443
